--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "6.5.0",
   "private": true,
   "scripts": {
+    "socket": "node server/socket.js",
     "start": "node server/index.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -19,6 +20,7 @@
     "cors": "^2.8.5",
     "echarts": "^4.2.1",
     "firebase": "^7.13.1",
+    "http": "0.0.1-security",
     "instantsearch.css": "^7.3.1",
     "jquery": "^3.4.1",
     "leaflet": "^1.4.0",
@@ -28,6 +30,8 @@
     "paho-mqtt": "^1.1.0",
     "screenfull": "^4.2.1",
     "slick-carousel": "^1.8.1",
+    "socket.io": "^3.0.1",
+    "socket.io-client": "^3.0.1",
     "sqlite3": "^5.0.0",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.10",
@@ -49,9 +53,11 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.2",
     "vue-slick": "^1.1.15",
+    "vue-socket.io": "^3.0.10",
     "vue-star-rating": "^1.6.1",
     "vue-tour": "^1.1.0",
     "vue-video-player": "^5.0.2",
+    "vue-websocket": "^0.2.3",
     "vue-wysiwyg": "^1.7.2",
     "vue2-breadcrumbs": "^2.0.0",
     "vue2-dragula": "^2.5.4",
@@ -62,7 +68,8 @@
     "vuetify": "^2.2.3",
     "vuex": "^3.0.1",
     "weather-icons": "^1.3.2",
-    "websocket": "^1.0.32"
+    "websocket": "^1.0.32",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
